infra/k8s/comments-depl.yaml
apiVersion : apps/v1
kind: Deployment

metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template: 
    metadata:
      labels:
        app: comments
    spec:
      containers: 
        - name: comments
          image: 9862672975/comments


---

apiVersion: v1
kind: Service
metadata: 
  name: comments-srv
spec:
  selector:
    app: comments-bus
  
  ports: 
    - name: comments
      protocol: TCP
      port: 5001
      targetPort: 5001
