infra/k8s/posts-depl.yaml
apiVersion : apps/v1
kind: Deployment

metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template: 
    metadata:
      labels:
        app: posts
    spec:
      containers: 
        - name: posts
          image: 9862672975/posts

---

apiVersion: v1
kind: Service
metadata: 
  name: posts-srv
spec:
  selector:
    app: posts
  
  ports: 
    - name: posts
      protocol: TCP
      port: 5000
      targetPort: 5000
