infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv-node

spec:
  type: NodePort
  selector: 
    app: posts
  
  ports: 
    - name: posts
      protocol: TCP
      port: 5000
      targetPort: 5000
